--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,15 @@
 			<artifactId>tinymce-for-flow</artifactId>
 			<version>1.4</version>
 		</dependency>
-	
+
+		<!-- https://mvnrepository.com/artifact/javax.enterprise/cdi-api -->
+		<dependency>
+			<groupId>javax.enterprise</groupId>
+			<artifactId>cdi-api</artifactId>
+			<version>2.0.SP1</version>
+			<scope>provided</scope>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
@@ -172,7 +180,20 @@
 			<artifactId>ckeditor-vaadin</artifactId>
 			<version>1.0.7</version>
 		</dependency>
-		
+
+		<!-- https://mvnrepository.com/artifact/org.reflections/reflections -->
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
+			<version>0.9.12</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.vaadin.alump.lazylayouts</groupId>
+			<artifactId>lazylayouts-addon</artifactId>
+			<version>0.2.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -211,7 +232,7 @@
 			<!-- Production mode is activated using -Pproduction -->
 			<id>production</id>
 			<properties>
-				<vaadin.productionMode>true</vaadin.productionMode>
+				<vaadin.productionMode>false</vaadin.productionMode>
 			</properties>
 
 			<dependencies>
